--- a/React/basics/src/index.css
+++ b/React/basics/src/index.css
@@ -1,30 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-
-#navbar {
-  font-size: 30px;
-  background-color: wheat;
-  display: flex;
-  justify-content: center;
-  /* horizontal center */
-  align-items: center;
-  /* vertical center */
-  gap: 10px;
-  list-style: none;
-  height: 60px;
-  width: 100%;
-}
-
-#first {
-  background-color: crimson;
-  text-align: center;
-  font-size: larger;
-  border-radius: 10px;
-  padding: 10px;
-  color: whitesmoke;
-  margin: 20px;
-}
+@import "tailwindcss";
