--- a/React/basics/src/index.css
+++ b/React/basics/src/index.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: 'helvetica neue'; */
+    font-family: 'helvetica neue';
 }
 
 html,
@@ -43,7 +43,7 @@ body {
     height: 42px;
     width: 42px;
     border-radius: 50%;
-    border: 1px solid #dadada;
+    border: 1px solid black;
     padding: 3px;
     object-fit: cover;
 }
